tests/static/sa-clang.txt
In file included from src/config/DictPage.cpp:23:
src/config/DictServerDialog.h:24:10: fatal error: 'ui_DictServerDialog.h' file not found
#include "ui_DictServerDialog.h"
         ^
1 error generated.
